[workspace]
resolver = "2"
members = [
    "crates/ceky-protocol",
    "crates/ceky-transport",
    "crates/ceky-crypto",
    "crates/ceky-dht",
    "crates/ceky-nat",
    "crates/ceky-node", "crates/ceky-transfer", "crates/ceky-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ceky"]
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
# Async runtime & I/O
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Zero-copy buffers
bytes = "1"

# Lock-free concurrency
dashmap = "6"
crossbeam = "0.8"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Serialization & checksums
crc32c = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Memory allocator
mimalloc = { version = "0.1", default-features = false }

# Persistence (cold data)
redb = "2"

# Internal crates
ceky-protocol = { path = "crates/ceky-protocol" }
ceky-transport = { path = "crates/ceky-transport" }
ceky-crypto = { path = "crates/ceky-crypto" }
ceky-dht = { path = "crates/ceky-dht" }
ceky-nat = { path = "crates/ceky-nat" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
