[package]
name = "ceky-nat"
description = "NAT traversal with hole punching and relay fallback for cekyP2P"
version.workspace = true
edition.workspace = true

[dependencies]
ceky-protocol.workspace = true
ceky-transport.workspace = true
ceky-crypto.workspace = true
bytes.workspace = true
tokio.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
