[package]
name = "ceky-node"
description = "Main P2P node binary orchestrating all cekyP2P subsystems"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ceky-node"
path = "src/main.rs"

[dependencies]
ceky-protocol.workspace = true
ceky-transport.workspace = true
ceky-crypto.workspace = true
ceky-dht.workspace = true
ceky-nat.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dashmap.workspace = true
mimalloc = { workspace = true, optional = true }
bytes.workspace = true
ceky-transfer = { version = "0.1.0", path = "../ceky-transfer" }
ceky-telemetry = { version = "0.1.0", path = "../ceky-telemetry" }
crossbeam.workspace = true
tokio-util.workspace = true
hex = "0.4.3"

# API dependencies
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower-http = { version = "0.5.2", features = ["auth", "cors", "trace"] }
serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.12.5", features = ["json"] }
tokio-tungstenite = "0.23.1"

[features]
default = []
# Enable mimalloc allocator (requires C compiler — recommended for Linux production)
custom-allocator = ["dep:mimalloc"]
