[package]
name = "ceky-transfer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
ceky-crypto = { version = "0.1.0", path = "../ceky-crypto" }
ceky-protocol = { version = "0.1.0", path = "../ceky-protocol" }
dashmap.workspace = true
getrandom = "0.4.2"
memmap2 = "0.9.10"
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
